style.css追加. index.html更新

--- a/index.html
+++ b/index.html
@@ -5,15 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="テック太郎の自己紹介">
+    <link rel="stylesheet" href="style.css">
     <title>PORTFOLIO</title>
 </head>
 <body>
     <header>
-        <h1>
+        <h1 class="block-header">
             <a href="">
-                <samp>P</samp>ortfolio
+                <span class="color-green">P</span>ortfolio
             </a>
         </h1>
     </header>
+    <div class="block-main">
+        <div class="box-profele">
+            <h2 class="sub-title"><span class="coler-green">P</span>rofele</h2>
+            <div class="item list">
+                <img src="./img/profile.png" alt="プロフィール画像">
+                <b>テック太郎</b>
+                <p class="gleen">HTML / CSS / php / MySQL / Laravel / Adobe XD ></p>
+                <p>ここに文字が入ります。ここに文字が入ります。ここに文字が入ります。ここに文字が入ります。</p>
+            </div>
+            <ul class="icon-iist">
+                <li>
+                    <a href="">
+                        <img src="img/github.png" alt="GitHabのアイコン">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/twitter.png" alt="GitHabのアイコン">
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+        <div class="box-works"></div>
+        <h2 class="sub-title"><span class="coler-green">W</span>orks</h2>]
+        <ul class="works-list">
+            <li>
+                <img src="img/work_1.jpeg" alt="Twitterクローンの画像">
+            </li>
+        </ul>
 </body>
 </html>
