--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             </a>
         </h1>
     </header>
+
     <div class="block-main">
-        <div class="box-profele">
-            <h2 class="sub-title"><span class="coler-green">P</span>rofele</h2>
+        <div class="box-profile">
+            <h2 class="sub-title"><span class="color-green">P</span>rofile</h2>
             <div class="item list">
                 <img src="./img/profile.png" alt="プロフィール画像">
                 <b>テック太郎</b>
