Profileのレイアウト完了

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     <div class="block-main">
         <div class="box-profile">
             <h2 class="sub-title"><span class="color-green">P</span>rofile</h2>
-            <div class="item list">
+            <div class="item-list">
                 <img src="./img/profile.png" alt="プロフィール画像">
                 <b>テック太郎</b>
                 <p class="gleen">HTML / CSS / php / MySQL / Laravel / Adobe XD ></p>
                 <p>ここに文字が入ります。ここに文字が入ります。ここに文字が入ります。ここに文字が入ります。</p>
             </div>
-            <ul class="icon-iist">
+        </div>
+            <ul class="icon-list">
                 <li>
                     <a href="">
                         <img src="img/github.png" alt="GitHabのアイコン">
@@ -37,7 +38,6 @@
                         <img src="img/twitter.png" alt="GitHabのアイコン">
                     </a>
                 </li>
-
             </ul>
         </div>
         <div class="box-works"></div>
