--- a/index.html
+++ b/index.html
@@ -41,11 +41,36 @@
             </ul>
         </div>
         <div class="box-works"></div>
-        <h2 class="sub-title"><span class="coler-green">W</span>orks</h2>]
+        <h2 class="sub-title"><span class="color-green">W</span>orks</h2>
         <ul class="works-list">
             <li>
                 <img src="img/work_1.jpeg" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="#">Webサイト</a>
+                    <a href="#">GitHub</a>
+                </div>
+            </li>
+            <li>
+                <img src="img/work_1.jpeg" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="#">Webサイト</a>
+                    <a href="#">GitHub</a>
+                </div>
+            </li>
+            <li>
+                <img src="img/work_1.jpeg" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="#">Webサイト</a>
+                    <a href="#">GitHub</a>
+                </div>
             </li>
         </ul>
+</body>
 </body>
 </html>
